@@ -10,11 +10,16 @@ package org.elasticsearch.common.util;
 
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.NavigableMap;
 import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
+import java.util.function.Function;
+import java.util.function.Supplier;
+import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 public class Maps {
@@ -34,8 +39,9 @@ public class Maps {
         if (left == null || right == null || left.size() != right.size()) {
             return false;
         }
-        return left.entrySet().stream()
-                .allMatch(e -> right.containsKey(e.getKey()) && Objects.deepEquals(e.getValue(), right.get(e.getKey())));
+        return left.entrySet()
+            .stream()
+            .allMatch(e -> right.containsKey(e.getKey()) && Objects.deepEquals(e.getValue(), right.get(e.getKey())));
     }
 
     /**
@@ -52,17 +58,20 @@ public class Maps {
         Objects.requireNonNull(map);
         Objects.requireNonNull(key);
         assert checkIsImmutableMap(map, key, map.get(key));
-        return map.entrySet().stream().filter(k -> key.equals(k.getKey()) == false)
-            .collect(Collectors.collectingAndThen(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue),
-                Collections::<K, V>unmodifiableMap));
+        return map.entrySet()
+            .stream()
+            .filter(k -> key.equals(k.getKey()) == false)
+            .collect(
+                Collectors.collectingAndThen(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue), Collections::<K, V>unmodifiableMap)
+            );
     }
 
     // map classes that are known to be immutable, used to speed up immutability check in #assertImmutableMap
     private static final Set<Class<?>> IMMUTABLE_MAP_CLASSES = org.elasticsearch.core.Set.of(
-            Collections.emptyMap().getClass(),
-            Collections.unmodifiableMap(new HashMap<>()).getClass(),
-            org.elasticsearch.core.Map.of().getClass(),
-            org.elasticsearch.core.Map.of("a", "b").getClass()
+        Collections.emptyMap().getClass(),
+        Collections.unmodifiableMap(new HashMap<>()).getClass(),
+        org.elasticsearch.core.Map.of().getClass(),
+        org.elasticsearch.core.Map.of("a", "b").getClass()
     );
 
     private static <K, V> boolean checkIsImmutableMap(final Map<K, V> map, final K key, final V value) {
@@ -74,8 +83,7 @@ public class Maps {
         try {
             map.put(key, value);
             return false;
-        } catch (final UnsupportedOperationException ignored) {
-        }
+        } catch (final UnsupportedOperationException ignored) {}
         return true;
     }
 
@@ -128,4 +136,49 @@ public class Maps {
         }
         return flatMap;
     }
+
+    /**
+     * Returns a {@link Collector} that accumulates the input elements into a sorted map and finishes the resulting set into an
+     * unmodifiable sorted map. The resulting read-only view through the unmodifiable sorted map is a sorted map.
+     *
+     * @param <T> the type of the input elements
+     * @return an unmodifiable {@link NavigableMap} where the underlying map is sorted
+     */
+    public static <T, K, V> Collector<T, ?, NavigableMap<K, V>> toUnmodifiableSortedMap(
+        Function<T, ? extends K> keyMapper,
+        Function<T, ? extends V> valueMapper
+    ) {
+        return Collectors.collectingAndThen(
+            Collectors.toMap(
+                keyMapper,
+                valueMapper,
+                (v1, v2) -> { throw new IllegalStateException("Duplicate key (attempted merging values " + v1 + "  and " + v2 + ")"); },
+                () -> new TreeMap<K, V>()
+            ),
+            Collections::unmodifiableNavigableMap
+        );
+    }
+
+    /**
+     * Returns a {@link Collector} that accumulates the input elements into a linked hash map and finishes the resulting set into an
+     * unmodifiable map. The resulting read-only view through the unmodifiable map is a linked hash map.
+     *
+     * @param <T> the type of the input elements
+     * @return an unmodifiable {@link Map} where the underlying map has a consistent order
+     */
+    public static <T, K, V> Collector<T, ?, Map<K, V>> toUnmodifiableOrderedMap(
+        Function<T, ? extends K> keyMapper,
+        Function<T, ? extends V> valueMapper
+    ) {
+        return Collectors.collectingAndThen(
+            Collectors.toMap(
+                keyMapper,
+                valueMapper,
+                (v1, v2) -> { throw new IllegalStateException("Duplicate key (attempted merging values " + v1 + "  and " + v2 + ")"); },
+                (Supplier<LinkedHashMap<K, V>>) LinkedHashMap::new
+            ),
+            Collections::unmodifiableMap
+        );
+    }
+
 }
