@@ -18,8 +18,6 @@ import org.apache.lucene.search.Query;
 import org.apache.lucene.store.Directory;
 import org.elasticsearch.Version;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
-import org.elasticsearch.core.CheckedConsumer;
-import org.elasticsearch.core.Nullable;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.breaker.CircuitBreaker;
 import org.elasticsearch.common.bytes.BytesArray;
@@ -29,14 +27,12 @@ import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.BigArrays;
 import org.elasticsearch.common.util.MockBigArrays;
 import org.elasticsearch.common.util.MockPageCacheRecycler;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentFactory;
-import org.elasticsearch.common.xcontent.XContentType;
-import org.elasticsearch.common.xcontent.json.JsonXContent;
+import org.elasticsearch.core.CheckedConsumer;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.index.analysis.AnalyzerScope;
 import org.elasticsearch.index.analysis.IndexAnalyzers;
+import org.elasticsearch.index.analysis.NameOrDefinition;
 import org.elasticsearch.index.analysis.NamedAnalyzer;
 import org.elasticsearch.index.cache.bitset.BitsetFilterCache;
 import org.elasticsearch.index.fielddata.IndexFieldData;
@@ -63,6 +59,11 @@ import org.elasticsearch.search.sort.BucketedSort.ExtraData;
 import org.elasticsearch.search.sort.SortAndFormats;
 import org.elasticsearch.search.sort.SortBuilder;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentFactory;
+import org.elasticsearch.xcontent.XContentType;
+import org.elasticsearch.xcontent.json.JsonXContent;
 
 import java.io.IOException;
 import java.util.Collection;
@@ -71,17 +72,16 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.BiFunction;
 import java.util.function.BooleanSupplier;
 import java.util.function.Function;
+import java.util.function.Supplier;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonMap;
 import static java.util.stream.Collectors.toList;
-import static org.mockito.Matchers.anyObject;
-import static org.mockito.Matchers.anyString;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 /**
  * Test case that lets you easilly build {@link MapperService} based on some
@@ -92,8 +92,9 @@ public abstract class MapperServiceTestCase extends ESTestCase {
 
     protected static final Settings SETTINGS = Settings.builder().put("index.version.created", Version.CURRENT).build();
 
-    protected static final ToXContent.Params INCLUDE_DEFAULTS
-        = new ToXContent.MapParams(Collections.singletonMap("include_defaults", "true"));
+    protected static final ToXContent.Params INCLUDE_DEFAULTS = new ToXContent.MapParams(
+        Collections.singletonMap("include_defaults", "true")
+    );
 
     protected Collection<? extends Plugin> getPlugins() {
         return emptyList();
@@ -170,10 +171,12 @@ public abstract class MapperServiceTestCase extends ESTestCase {
     /**
      * Create a {@link MapperService} like we would for an index.
      */
-    protected final MapperService createMapperService(Version version,
-                                                      Settings settings,
-                                                      BooleanSupplier idFieldDataEnabled,
-                                                      XContentBuilder mapping) throws IOException {
+    protected final MapperService createMapperService(
+        Version version,
+        Settings settings,
+        BooleanSupplier idFieldDataEnabled,
+        XContentBuilder mapping
+    ) throws IOException {
 
         MapperService mapperService = createMapperService(version, settings, idFieldDataEnabled);
         merge(mapperService, mapping);
@@ -184,9 +187,7 @@ public abstract class MapperServiceTestCase extends ESTestCase {
         throw new UnsupportedOperationException("Cannot compile script " + Strings.toString(script));
     }
 
-    protected final MapperService createMapperService(Version version,
-                                                      Settings settings,
-                                                      BooleanSupplier idFieldDataEnabled) {
+    protected final MapperService createMapperService(Version version, Settings settings, BooleanSupplier idFieldDataEnabled) {
         IndexSettings indexSettings = createIndexSettings(version, settings);
         MapperRegistry mapperRegistry = new IndicesModule(
             getPlugins().stream().filter(p -> p instanceof MapperPlugin).map(p -> (MapperPlugin) p).collect(toList())
@@ -199,9 +200,7 @@ public abstract class MapperServiceTestCase extends ESTestCase {
             xContentRegistry(),
             similarityService,
             mapperRegistry,
-            () -> {
-                throw new UnsupportedOperationException();
-            },
+            () -> { throw new UnsupportedOperationException(); },
             idFieldDataEnabled,
             this::compileScript
         );
@@ -214,9 +213,7 @@ public abstract class MapperServiceTestCase extends ESTestCase {
             .put(settings)
             .put("index.version.created", version)
             .build();
-        IndexMetadata meta = IndexMetadata.builder("index")
-            .settings(settings)
-            .build();
+        IndexMetadata meta = IndexMetadata.builder("index").settings(settings).build();
         return new IndexSettings(meta, settings);
     }
 
@@ -226,10 +223,7 @@ public abstract class MapperServiceTestCase extends ESTestCase {
         CheckedConsumer<IndexReader, IOException> test
     ) throws IOException {
         IndexWriterConfig iwc = new IndexWriterConfig(IndexShard.buildIndexAnalyzer(mapperService));
-        try (
-            Directory dir = newDirectory();
-            RandomIndexWriter iw = new RandomIndexWriter(random(), dir, iwc)
-        ) {
+        try (Directory dir = newDirectory(); RandomIndexWriter iw = new RandomIndexWriter(random(), dir, iwc)) {
             builder.accept(iw);
             try (IndexReader reader = iw.getReader()) {
                 test.accept(reader);
@@ -243,14 +237,25 @@ public abstract class MapperServiceTestCase extends ESTestCase {
 
     protected final SourceToParse source(String id, CheckedConsumer<XContentBuilder, IOException> build, @Nullable String routing)
         throws IOException {
-        XContentBuilder builder = JsonXContent.contentBuilder().startObject();
-        build.accept(builder);
-        builder.endObject();
-        return new SourceToParse("test", "_doc", id, BytesReference.bytes(builder), XContentType.JSON, routing, Collections.emptyMap());
+        return source("test", id, build, routing, org.elasticsearch.core.Map.of());
     }
 
-    protected final SourceToParse source(String id, CheckedConsumer<XContentBuilder, IOException> build,
-                                         @Nullable String routing, Map<String, String> dynamicTemplates) throws IOException {
+    protected final SourceToParse source(
+        String id,
+        CheckedConsumer<XContentBuilder, IOException> build,
+        @Nullable String routing,
+        Map<String, String> dynamicTemplates
+    ) throws IOException {
+        return source("text", id, build, routing, dynamicTemplates);
+    }
+
+    protected final SourceToParse source(
+        String index,
+        String id,
+        CheckedConsumer<XContentBuilder, IOException> build,
+        @Nullable String routing,
+        Map<String, String> dynamicTemplates
+    ) throws IOException {
         XContentBuilder builder = JsonXContent.contentBuilder().startObject();
         build.accept(builder);
         builder.endObject();
@@ -282,9 +287,7 @@ public abstract class MapperServiceTestCase extends ESTestCase {
     /**
      * Merge a new mapping into the one in the provided {@link MapperService} with a specific {@code MergeReason}
      */
-    protected final void merge(MapperService mapperService,
-                               MapperService.MergeReason reason,
-                               XContentBuilder mapping) throws IOException {
+    protected final void merge(MapperService mapperService, MapperService.MergeReason reason, XContentBuilder mapping) throws IOException {
         mapperService.merge("_doc", new CompressedXContent(BytesReference.bytes(mapping)), reason);
     }
 
@@ -361,6 +364,22 @@ public abstract class MapperServiceTestCase extends ESTestCase {
             @Override
             public long nowInMillis() {
                 return 0;
+            }
+
+            @Override
+            public Analyzer getNamedAnalyzer(String analyzer) {
+                return null;
+            }
+
+            @Override
+            public Analyzer buildCustomAnalyzer(
+                IndexSettings indexSettings,
+                boolean normalizer,
+                NameOrDefinition tokenizer,
+                List<NameOrDefinition> charFilters,
+                List<NameOrDefinition> tokenFilters
+            ) {
+                return null;
             }
 
             @Override
@@ -520,37 +539,50 @@ public abstract class MapperServiceTestCase extends ESTestCase {
         Query query,
         CheckedConsumer<AggregationContext, IOException> test
     ) throws IOException {
-        withLuceneIndex(
-            mapperService,
-            writer -> {
-                for (SourceToParse doc: docs) {
-                    writer.addDocuments(mapperService.documentMapper().parse(doc).docs());
-                }
-            },
-            reader -> test.accept(aggregationContext(valuesSourceRegistry, mapperService, new IndexSearcher(reader), query))
-        );
+        withLuceneIndex(mapperService, writer -> {
+            for (SourceToParse doc : docs) {
+                writer.addDocuments(mapperService.documentMapper().parse(doc).docs());
+            }
+        }, reader -> test.accept(aggregationContext(valuesSourceRegistry, mapperService, new IndexSearcher(reader), query)));
     }
 
     protected SearchExecutionContext createSearchExecutionContext(MapperService mapperService) {
-        SearchExecutionContext searchExecutionContext = mock(SearchExecutionContext.class);
-        when(searchExecutionContext.getFieldType(anyString())).thenAnswer(inv -> mapperService.fieldType(inv.getArguments()[0].toString()));
-        when(searchExecutionContext.isFieldMapped(anyString()))
-            .thenAnswer(inv -> mapperService.fieldType(inv.getArguments()[0].toString()) != null);
-        when(searchExecutionContext.getIndexAnalyzers()).thenReturn(mapperService.getIndexAnalyzers());
-        when(searchExecutionContext.getIndexSettings()).thenReturn(mapperService.getIndexSettings());
-        when(searchExecutionContext.getObjectMapper(anyString())).thenAnswer(
-            inv -> mapperService.mappingLookup().objectMappers().get(inv.getArguments()[0].toString()));
-        when(searchExecutionContext.getMatchingFieldNames(anyObject())).thenAnswer(
-            inv -> mapperService.mappingLookup().getMatchingFieldNames(inv.getArguments()[0].toString())
+        return createSearchExecutionContext(mapperService, null);
+    }
+
+    protected SearchExecutionContext createSearchExecutionContext(MapperService mapperService, IndexSearcher searcher) {
+        final SimilarityService similarityService = new SimilarityService(
+            mapperService.getIndexSettings(),
+            null,
+            org.elasticsearch.core.Map.of()
         );
-        when(searchExecutionContext.allowExpensiveQueries()).thenReturn(true);
-        when(searchExecutionContext.lookup()).thenReturn(new SearchLookup(mapperService::fieldType, (ft, s) -> {
-            throw new UnsupportedOperationException("search lookup not available");
-        }));
+        final long nowInMillis = randomNonNegativeLong();
+        return new SearchExecutionContext(
+            0,
+            0,
+            mapperService.getIndexSettings(),
+            null,
+            (ft, idxName, lookup) -> ft.fielddataBuilder(idxName, lookup)
+                .build(new IndexFieldDataCache.None(), new NoneCircuitBreakerService()),
+            mapperService,
+            mapperService.mappingLookup(),
+            similarityService,
+            null,
+            xContentRegistry(),
+            writableRegistry(),
+            null,
+            searcher,
+            () -> nowInMillis,
+            null,
+            null,
+            () -> true,
+            null,
+            Collections.emptyMap()
+        );
+    }
 
-        SimilarityService similarityService = new SimilarityService(mapperService.getIndexSettings(), null, Collections.emptyMap());
-        when(searchExecutionContext.getDefaultSimilarity()).thenReturn(similarityService.getDefaultSimilarity());
-
-        return searchExecutionContext;
+    protected BiFunction<MappedFieldType, Supplier<SearchLookup>, IndexFieldData<?>> fieldDataLookup() {
+        return (mft, lookupSource) -> mft.fielddataBuilder("test", lookupSource)
+            .build(new IndexFieldDataCache.None(), new NoneCircuitBreakerService());
     }
 }
